bff-app/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-app
  namespace: wms-proto
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bff-app
  template:
    metadata:
      labels:
        app: bff-app
    spec:
      imagePullSecrets:
        - name: nexus-docker-creds
      containers:
        - name: bff-app
          image: 10.96.191.117:8082/bff-app:jenkins-21
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3030
          readinessProbe:
            httpGet:
              path: /
              port: 3030
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3030
            initialDelaySeconds: 90
            periodSeconds: 10
