bff-app/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-app
  namespace: wms-proto
spec:
  selector:
    app: bff-app
  ports:
    - port: 3030
      targetPort: 3030
